# attakait_hp

./: .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt
attakait_hp/: asgi.py  settings.py  urls.py  wsgi.py
hp/: admin.py  models.py  urls.py  views.py
hp/migrations/: 0001_initial.py
hp/templates/: about_me.html  base.html  base_lp.html  contact.html  home.html  login.html  manamana.html  portfolios.html  self_introduction.html  skills.html  top.html
static/css/: main.css  main_lp.css
static/js/: custom.js
templates/: 403.html  404.html  500.html  project_base.html
