[tool.poetry]
name = "attakait_hp"
version = "0.1.0"
description = ""
authors = ["Taichi Kanaya <taichi.kanaya@attakait.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
django = "^3.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
